--- a/index.html
+++ b/index.html
@@ -5,25 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <section>
     <nav>
-  <img src="./assets/FES.png" alt="">
+  <img src="./assets/FES.svg" class="logo" alt="">
   
         <ul>
            <li><a href="#about">About</a></li>
-            <li><a href="d#iscord">Discord</a></li>
+            <li><a href="discord">Discord</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
    </nav>
    <header>
     <div>
+        class="row"
+    </div>
+    <div>
         <h1>
         Best Place To Learn Frontend
     </h1>
-    <p>
-        Go from being an absolute beginner to pro with a simplified process
+    
+        <p class="subheader">Go from being an absolute beginner to pro with a simplified process
     </p>
     <button>Start Now</button>
         Join our community of frontend developers and enhance your skills with the latest technologies and trends.
@@ -40,45 +44,55 @@
 
    <section id="about">
     <h2>About</h2>
-    <div>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, eos vitae, doloribus itaque reiciendis hic eaque, expedita quod sunt atque eius earum commodi voluptas in ut id. Magnam, labore consectetur?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores omnis non minus nulla eius dicta, quis praesentium aperiam officiis quidem a dolorem quo possimus qui quisquam commodi! Aspernatur, quidem architecto!</p>   
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquam explicabo, non nisi quasi inventore debitis. Laudantium odio dignissimos veritatis officiis deleniti rerum ad, officia obcaecati laboriosam laborum saepe corporis.</p>     
-   </div>
-<figure>
+    <div class="row">
+    <div class="section__description">
+        <div class="section__description--wrapper">
+    <p class="section__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur ab obcaecati nihil quis saepe harum cum praesentium veniam, nesciunt veritatis ipsa aliquid. Ducimus doloribus repudiandae animi consequatur? Beatae, itaque ex.</p>
+<p class="section__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt aperiam voluptate minus ipsam. Velit impedit, cupiditate, veritatis neque fuga optio vel vitae, odio numquam explicabo cumque quia voluptate dicta facere!</p>   
+
+<figure class="about_img--wrapper">
     <img src="./assets/about.png" alt="">
     </figure>
+    </div>
+    </div>
+    </div>
    </section>
 
    <section id="discord">
     <h2>Discord</h2>
-    <figure>
+    <div class="row">
+    <div class="section__description">
+    <figure class="about_img--wrapper">
         <img src="./assets/discord.png" alt="Discord">
     </figure>
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat possimus dignissimos laudantium labore id, vel, molestiae ipsa pariatur soluta tempore, obcaecati necessitatibus quo corrupti dolore tenetur. Voluptatum impedit officiis repellat?</p>
-   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos blanditiis, cupiditate, quibusdam reiciendis fuga, cum provident officiis odit ab culpa ea enim incidunt dolores accusamus soluta maiores sapiente unde repudiandae.</p>
+    <div class="section__description--wrapper">
+        <p class="section__description--para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat possimus dignissimos laudantium labore id, vel, molestiae ipsa pariatur soluta tempore, obcaecati necessitatibus quo corrupti dolore tenetur. Voluptatum impedit officiis repellat?</p>
+   <p class="section__description--para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos blanditiis, cupiditate, quibusdam reiciendis fuga, cum provident officiis odit ab culpa ea enim incidunt dolores accusamus soluta maiores sapiente unde repudiandae.</p>
     </div>
+    </div>
+    </div>
+
    </section>
 
    <section id="contact">
     <h2>Contact</h2>
     <form action="">
         <span>Email</span>
-        <input type="text" placeholder="email">
+        <input type="email" placeholder="jane@example.com">
         <span>Message</span>
-        <textarea type="text" placeholder="message"></textarea>
-        </form>
+        <textarea type="text" placeholder="Cool website, let's get connected!"></textarea>
+       <button>Contact Us!</button>
+    </form>
     </section>
     </main>  
 
     <footer>
-        <img src="./assets/FES.svg" alt="">
-        <div>
-            <a href="#about">About></a>
-            <a href="#discord">Discord></a>    
-            <a href="#contact">Contact></a>
-                <a href="#">Courses></a>
+        <img class="footer__logo" src="./assets/FES.svg" alt="">
+        <div class="footer__links">
+            <a class="footer__link" href="#about">About></a>
+            <a class="footer__link" href="#discord">Discord></a>    
+            <a class="footer__link" href="#contact">Contact></a>
+                <a class="footer__link" href="#">Courses></a>
         </div>
         <p>Copyright Frontend Simplified</p>
     </footer>
